# Cap2Skill

./: .gitignore  README.md
cap2skill/: .env  pyproject.toml
cap2skill/docs/: ros2_system_report.json  ros2_system_report_simulation_mapping.md  ros2_system_report_simulation_navigation.md  ros2_system_report_with_descriptions.json
cap2skill/prompt-templates/: system_prompt.txt  system_rag_prep.txt  system_skill_generation.txt  user_prompt.txt  user_rag_prep.txt  user_skill_generation.txt
cap2skill/src/cap2skill/: cap2skill.py  cap2skill_rest_api.py  log_config.py
cap2skill/src/cap2skill/prompt_handling/: prompt_handling.py
cap2skill/src/cap2skill/report_handling/: control_report_handling.py  ros2_handling.py  ros2_report_generation.py
capability-models/: collision-avoidance.ttl  get-distance-to-nearest-object.ttl  get-position.ttl  mapping.ttl  move-forward.ttl  move-to-point.ttl  navigate-to-point.ttl  rotate.ttl  set-velocity.ttl
results/api-documentation/: ros2_system_report_mapping_with_descriptions.json  (+2 more)
ros2-context/: ros2_report.py  ros2_system_report.md
skill-implementations/: get_position.py  mapping.py  move_forward.py  navigate_to_point.py  rotate.py  set_velocity.py
skill-implementations/src/navigate_to_point/: package.xml  setup.cfg  setup.py
skill-implementations/src/navigate_to_point/navigate_to_point/: navigate_to_point.py
user_input/: collision-avoidance.json  get_distance_to_nearest_object.json  get_position.json  mapping.json  move-forward.json  move_forward.json  move_to_point.json  navigate_to_point.json  rotate.json  set_velocity.json
(+40 files in other folders)
