[project]
name = "cap2skill"
version = "0.1.0"
description = ""
authors = [
    {name = "Luis Miguel Vieira da Silva",email = "miguel.vieira@hsu-hh.de"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "langchain (>=0.3.19,<0.4.0)",
    "openai (>=1.63.2,<2.0.0)",
    "langchain-community (>=0.3.17,<0.4.0)",
    "langchain-core (>=0.3.36,<0.4.0)",
    "unstructured (>=0.16.21,<0.17.0)",
    "markdown (>=3.7,<4.0)",
    "langchain-openai (>=0.3.6,<0.4.0)",
    "chromadb (>=0.6.3,<0.7.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
